--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     api "io.reactivex.rxjava2:rxjava:2.2.21"
     api "io.reactivex.rxjava2:rxandroid:2.0.2"
 
+    api "androidx.lifecycle:lifecycle-extensions:2.1.0"
+
 }
